--- a/android/app/src/main/res/values-night/styles.xml
+++ b/android/app/src/main/res/values-night/styles.xml
@@ -5,20 +5,22 @@
         <!-- Show a splash screen on the activity. Automatically removed when
              the Flutter engine draws its first frame -->
          <item name="android:windowFullscreen">true</item>
-        <item name="android:windowTranslucentNavigation">true</item>
+<!--        <item name="android:windowTranslucentNavigation">true</item>-->
         <!-- <item name="android:windowSplashScreenAnimatedIcon">@mipmap/dd_logo_foreground</item> -->
-        <item name="android:windowBackground">@mipmap/dd_logo_foreground</item>
+<!--        <item name="android:windowBackground">@mipmap/dd_logo_foreground</item>-->
+        <item name="android:windowBackground">@color/background</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@mipmap/dd_logo_foreground</item>
+        <item name="android:windowSplashScreenBehavior">icon_preferred</item>
     </style>
     <!-- Theme applied to the Android Window as soon as the process has started.
          This theme determines the color of the Android Window while your
          Flutter UI initializes, as well as behind your Flutter UI while its
          running.
-         
 
          This Theme is only used starting with V2 of Flutter's Android embedding. -->
 
     <style name="NormalTheme" parent="@android:style/Theme.Black.NoTitleBar">
-        <item name="android:windowBackground">?android:colorBackground</item>
+        <item name="android:windowBackground">@color/background</item>
         <item name="android:navigationBarColor">@color/background</item>
     </style>
 </resources>
