--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,9 +4,12 @@
     <style name="LaunchTheme" parent="@android:style/Theme.Light.NoTitleBar">
         <!-- Show a splash screen on the activity. Automatically removed when
              the Flutter engine draws its first frame -->
-        <item name="android:windowBackground">@mipmap/dd_logo_foreground</item>
+<!--        <item name="android:windowBackground">@mipmap/dd_logo_foreground</item>-->
 <!--        <item name="android:windowSplashScreenBrandingImage">@drawable/name</item>-->
-<!--        <item name="android:windowSplashScreenIconBackgroundColor">@color/#241c1c</item>-->
+        <item name="android:windowBackground">@color/lightBackground</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@mipmap/dd_logo_foreground</item>
+        <item name="android:windowSplashScreenBehavior">icon_preferred</item>
+<!--        <item name="android:windowSplashScreenIconBackgroundColor">@color/lightBackground</item>-->
     </style>
     <!-- Theme applied to the Android Window as soon as the process has started.
          This theme determines the color of the Android Window while your
@@ -16,7 +19,7 @@
          This Theme is only used starting with V2 of Flutter's Android embedding. -->
     <style name="NormalTheme" parent="@android:style/Theme.Light.NoTitleBar">
     
-        <item name="android:windowBackground">?android:colorBackground</item>
+        <item name="android:windowBackground">@color/lightBackground</item>
         <item name="android:navigationBarColor">@color/lightBackground</item>
     </style>
 </resources>
